# runcanvas

./: .dockerignore  .env.example  .gitignore  LICENSE  MANIFEST.sha256  Makefile  PROJECT_TREE.txt  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260715_0001_initial.py  20260718_0002_saved_places.py
backend/app/: __init__.py  config.py  db_backup.py  db_check.py  db_restore.py  dependencies.py  errors.py  logging.py  main.py  middleware.py  regions.py  security.py  seed.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  courses.py  jobs.py  saved_places.py  users.py
backend/app/routers/: __init__.py  admin.py  ai.py  auth.py  courses.py  generation.py  geocoding.py  health.py  me.py  routes.py  saved_places.py
backend/app/schemas/: __init__.py  admin.py  ai.py  auth.py  common.py  course.py  generation.py  geocoding.py  saved_place.py  user.py
backend/app/services/: auth.py  course.py  generation.py  geocoding.py  saved_places.py
backend/app/services/ai/: __init__.py  base.py  ollama.py  rules.py  service.py
backend/app/services/gpx/: __init__.py  exporter.py
backend/app/services/optimization/: __init__.py  (+1 more)
backend/app/workers/: runner.py
backend/tests/: conftest.py  test_api_auth.py  test_api_courses.py  test_api_generation.py  test_api_saved_places.py  test_config.py  test_cors.py  test_geometry.py  test_gpx.py  test_routing_preferences.py  test_scoring.py  test_shapes.py
(+72 files in other folders)
